--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,12 +1,16 @@
 .nav {
     grid-area: n;
     background-color: dodgerblue;
+    padding: 20px;
 }
 .item a {
     color: wheat;
     text-decoration: none;
     font-size: 22px;
 }
-.item.active a {
+.item .active{
     color: red;
+    transition: 0.6s;
+    font-size: 30px;
+
 }
